woked on css styles

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 
     <head>
         <title>Warm-Up 01</title>
-        <link rel="stylesheet" type="text/css" href="./style/reset.css" />
-        <link rel="stylesheet" type="text/css" href=".style/float.css" />
-        <link rel="stylesheet" type="text/css" href="./style/flex.css" />
-        <link rel="stylesheet" type="text/css" href="./style/grid.css" />
+        <link rel="stylesheet" type="text/css" href="style/reset.css" />
+        <link rel="stylesheet" type="text/css" href="style/float.css" />
+        <link rel="stylesheet" type="text/css" href="style/flex.css" />
+        <link rel="stylesheet" type="text/css" href="style/grid.css" />
     </head>
     
     <body>
         <header></header>
         <main>
-            <div id="left-column"></div>
-            <div id="center-column"></div>
-            <div id="right-column"></div>
+            <div id="left"></div>
+            <div id="content"></div>
+            <div id="right"></div>
         </main>
         <footer></footer>
     </body>
